Add missing javadoc for TestProcessStatusUpdateRecords